[package]
name = "private-set-intersection"
version = "0.1.0"
edition = "2021"
main = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
